# hangmanSimple

./: .gitignore  README.md  hangmanSimple.cabal
app/: Main.hs
src/: Game.hs  Lib.hs  Word.hs
