name:                hangmanSimple
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/hangmanSimple#readme
license:             BSD3
license-file:        LICENSE
author:              Christoher Nyberg
maintainer:          newMountain
copyright:           2017 Author name here
category:            Game
build-type:          Simple
extra-source-files:  README.md
                  ,  data/dict.txt
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , random 
  default-language:    Haskell2010

executable hangman
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hangmanSimple
                     , split
                     , random
  default-language:    Haskell2010

test-suite hangman-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hangmanSimple
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/NewMountain/hangmanSimple
